@@ -273,6 +273,7 @@ Frontend:
  + Allow to randomize hog names, hats, team name, flag, grave, voice and fort separately
  + “Random team” button is now able to randomly select from all available hats
  + Creating new game/weapon schemes guarantees unique names
+ + Mark custom forts with asterisk in team editor
  * Fix flag being selectable for computer players although it had no effect
  * Campaign screen does no longer show AI-controlled teams
  * Campaign names and campaign mission names can now be translated
